# hexlet-django-blog

./: .env_example  .gitignore  Makefile  README.md  docker-compose.db.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: flake8.yml
hexlet_django_blog/: export_env.py  settings.py  urls.py
hexlet_django_blog/article/: apps.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/: base.html  base_courses.html  course.html
